tests/mytests/error/symbol_error.ll
; Target
target triple = "x86_64-unknown-linux-gnu"
; External declaration of the printf function
declare i32 @printf(i8* noalias nocapture, ...)

; Actual code begins



define i32 @main() {
%test = alloca i32
store i32 3, i32* %test
ret i32 0
}

